<!--
  ~ Copyright 2015 MbientLab Inc. All rights reserved.
  ~
  ~ IMPORTANT: Your use of this Software is limited to those specific rights
  ~ granted under the terms of a software license agreement between the user who
  ~ downloaded the software, his/her employer (which must be your employer) and
  ~ MbientLab Inc, (the "License").  You may not use this Software unless you
  ~ agree to abide by the terms of the License which can be found at
  ~ www.mbientlab.com/terms . The License limits your use, and you acknowledge,
  ~ that the  Software may not be modified, copied or distributed and can be used
  ~ solely and exclusively in conjunction with a MbientLab Inc, product.  Other
  ~ than for the foregoing purpose, you may not use, reproduce, copy, prepare
  ~ derivative works of, modify, distribute, perform, display or sell this
  ~ Software and/or its documentation for any purpose.
  ~
  ~ YOU FURTHER ACKNOWLEDGE AND AGREE THAT THE SOFTWARE AND DOCUMENTATION ARE
  ~ PROVIDED "AS IS" WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESS OR IMPLIED,
  ~ INCLUDING WITHOUT LIMITATION, ANY WARRANTY OF MERCHANTABILITY, TITLE,
  ~ NON-INFRINGEMENT AND FITNESS FOR A PARTICULAR PURPOSE. IN NO EVENT SHALL
  ~ MBIENTLAB OR ITS LICENSORS BE LIABLE OR OBLIGATED UNDER CONTRACT, NEGLIGENCE,
  ~ STRICT LIABILITY, CONTRIBUTION, BREACH OF WARRANTY, OR OTHER LEGAL EQUITABLE
  ~ THEORY ANY DIRECT OR INDIRECT DAMAGES OR EXPENSES INCLUDING BUT NOT LIMITED
  ~ TO ANY INCIDENTAL, SPECIAL, INDIRECT, PUNITIVE OR CONSEQUENTIAL DAMAGES, LOST
  ~ PROFITS OR LOST DATA, COST OF PROCUREMENT OF SUBSTITUTE GOODS, TECHNOLOGY,
  ~ SERVICES, OR ANY CLAIMS BY THIRD PARTIES (INCLUDING BUT NOT LIMITED TO ANY
  ~ DEFENSE THEREOF), OR OTHER SIMILAR COSTS.
  ~
  ~ Should you have any questions regarding your right to use this Software,
  ~ contact MbientLab Inc, at www.mbientlab.com.
  -->

<resources>
    <string name="app_name">WeatherMonitor</string>
    <string name="title_connecting">Connecting</string>
    <string name="title_reconnect_attempt">Reconnecting</string>
    <string name="message_wait">Please wait</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="title_activity_maps">Map</string>

    <string name="action_settings">Settings</string>

    <string name="pref_alert_title">Alert</string>
    <string name="pref_alert_summary">Vibrate</string>
    <string name="pref_alert2_summary">Sound</string>
    <string name="pref_sync_temp">Alert limits</string>
    <string name="pref_sync_temp_summary">Set the alert limits</string>
    <string name="pref_google_name">Set Google account</string>
    <string name="pref_google_name_summary">Set your Google account</string>

    <string name="pref_user_profile">User Profile</string>

    <string name="temperature">-,-°C</string>

    <string name="pref_update_setting">Update Alert Settings</string>
    <string name="pref_update_setting2">Update Measurement Settings</string>
    <string name="pref_update_setting3">Update Frequency Settings</string>

</resources>
