<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_user_profile" >
        <EditTextPreference
            android:title="@string/pref_google_name"
            android:summary="@string/pref_google_name_summary"
            android:key="prefGoogle"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_update_setting" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefAlertVibrate"
            android:summary="@string/pref_alert_summary"
            android:persistent="true" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefAlertSound"
            android:summary="@string/pref_alert2_summary"
            android:persistent="true" >
        </CheckBoxPreference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_update_setting2" >

        <com.mbientlab.metawear.starter.SeekBarPreference
            android:defaultValue="30"
            android:key="tempAlert"
            android:persistent="true"/>

        <com.mbientlab.metawear.starter.SeekBarPreference
            android:defaultValue="1"
            android:key="tempFreq"
            android:persistent="true"/>
    </PreferenceCategory>

</PreferenceScreen>